fix card shadow ind dark mode

--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -229,3 +229,7 @@ body.dark .mm-cat-img{
     webkit-filter: brightness(0) invert(1);
     filter: brightness(0) invert(1);
 }
+
+body.dark .card{
+    box-shadow: 0px 4px 4px 0px #051f2dba;
+}
